project/force-app/main/default/objects/Sales_Activity_Target__c/Sales_Activity_Target__c.object-meta.xml
<CustomObject>
    <label>Sales Activity Target</label>
    <nameField>
        <displayFormat>TGT-{000000}</displayFormat>
        <label>Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Activity Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>