project/force-app/main/default/objects/Sales_Activity_Target__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
    
</CustomField>