project/force-app/main/default/objects/Sales_Activity_Target__c/fields/New_Account_Target__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Target__c</fullName>
    <label>New Account Target</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>