project/force-app/main/default/objects/Sales_Activity_Target__c/fields/Sales_Call_Target__c.field-meta.xml
<CustomField>
    <fullName>Sales_Call_Target__c</fullName>
    <label>Sales Call Target</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>