project/force-app/main/default/objects/Sales_Activity_Target__c/fields/Sales_Man__c.field-meta.xml
<CustomField>
    <fullName>Sales_Man__c</fullName>
    <label>Sales Man</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales Activity Targets (Sales_Man)</relationshipLabel>
    <relationshipName>Sales_Activity_Targe_Sales_Man</relationshipName>
</CustomField>